--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+.title {
+    font-weight: 400;
+    text-align: center;
+}
+.leftSide {
+    margin-left: 130vh
+}
+.header{
+    height: 9vh;
+    width: 100%;
+    background-color: rgb(63, 44, 44);
+    color: white;
+    display: flex;
+    padding-top: 2vh;    
+}
+
 .img{
     height: 80vh;
 }
